# alfred-os

./: .alfredrc.example  .env.example  .gitallowed  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MORNING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deploy.sh  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: audit.yml  bug.yml  feature.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  desktop-release.yml  gitleaks.yml  release.yml  scrub-history.yml  site.yml
Casks/: alfred-os.rb
Formula/: alfred-os.rb  pennyworth.rb
assets/brand/: README.md
clients/desktop/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
docs/: AGENTS.md  AI_ASSISTED_INSTALL.md  ARCHITECTURE.md  AWS_SETUP.md  BATMAN.md  BATMAN_PARENT_ISSUE_TEMPLATE.md  CAPABILITIES.md  CHAT_RUNTIME_DECISION.md  CLAUDE_CODE.md  CLAUDE_PROXY.md  CLI.md  CODEX_PROVIDER.md  CODE_MEMORY.md  CONNECTORS.md  DESIGN.md  DESKTOP_CLIENT.md  DRY_RUN.md  ENGINE_ROUTING.md  FLEET_BRAIN.md  GLOSSARY.md  GOALS.md  HERMES.md  INDEX.md  INSTALL_TIERS.md  INSTALL_TIME.md  INTEGRATIONS.md  LINUX.md  MACOS_KEYCHAIN.md  MACOS_PERMISSIONS.md  MEMORY_PROVIDERS.md  MONOREPO.md  MULTI_REPO_WORKED_EXAMPLE.md  NATIVE_CLIENT.md  OPERATING_THE_FLEET.md  OUTPUT_SAMPLES.md  PLAIN_MODE.md  PUBLISHING.md  RELEASE_CHECKLIST.md  RELEASING.md  SERVE.md  (+15 more)
examples/: agents.conf  connectors.yaml
examples/git-hooks/: pre-push
examples/launchd/: luminik.claude-proxy.plist.example
launchd/: _template.plist  agents.conf.example  render.sh
lib/: agent_runner.py  alfred_hooks.py  alfred_os_cli.py  batman.py  code_graph.py  compose_converse.py  conversation_condenser.py  cross_repo_pr.py  custom_agents.py  damian_planner.py  dependencies.py  intake_profiles.py  issue_assignment.py  issue_queue.py  issue_summary.py  labels.py  memory_judge.py  metrics.py  multi_worktree.py  planning_actions.py  planning_assistant.py  proof_telemetry.py  roster_manifest.json  roster_theme_store.py  scheduler.py  shipped_board.py  slack_approval.py  slack_control.py  slack_converse.py  slack_format.py  slack_intent.py  slack_issue_bridge.py  slack_listener.py  slack_thread_registry.py  slack_thread_status.py  slack_trust.py  spec_helper.py  status_cache.py  transcripts.py  workflow_validation.py
lib/agent_runner/: __init__.py  agent_events.py  config.py  context_governor.py  disk.py  github.py  lifecycle_doctor.py  memory_runtime.py  metadata.py  notify.py  orchestrator.py  paths.py  process.py  reliability.py  result.py  state.py  tool_digest.py  transcripts.py
lib/claude_proxy/: __init__.py  client.py  protocol.py  server.py
lib/connectors/: __init__.py  _state.py  linear.py  runner.py  sentry.py
lib/fleet_brain/: __init__.py  doctor.py  graph.py  store.py  (+1 more)
prompts/: bug-triage.md  code-review.md  cross-repo-coordinator.md  ecs-monitor.md  feature-dev.md  planner.md  post-deploy-smoke.md  review-fix.md  spec-bundle-planner.md  spec-interrogator.md  test-coverage.md
schema/: weekly.sample.json
scripts/: aws-route53-delegate-alfred-subdomain.sh  aws-route53-zone-ids.md
site/: .gitignore  DESIGN.md  README.md  astro.config.mjs  package-lock.json  package.json
systemd/: _template.service  _template.timer  render.sh
tests/: conftest.py  test_agent_cleanup.py  test_agent_launch_interpreter.py  test_agent_max_turn_policy.py  test_agent_notifications.py  test_agent_runner.py  test_alfred_assign.py  test_alfred_batman_setup.py  test_alfred_brain.py  test_alfred_cli_labels.py  test_alfred_hooks.py  test_alfred_init.py  test_alfred_label_state.py  test_alfred_logs.py  test_alfred_mcp.py  test_alfred_metrics.py  test_alfred_schedule.py  test_alfred_serve_cli.py  test_alfred_setup_token.py  test_alfred_shipped_public.py  test_alfred_telemetry_cli.py  test_ams_infra.py  test_audit_hardening.py  test_batman_bundle.py  test_batman_execute.py  test_batman_runner.py  test_claude_max_turns_default.py  test_claude_proxy_client.py  test_claude_proxy_protocol.py  test_claude_proxy_server.py  test_code_graph.py  test_code_map.py  test_code_memory_fetch_checksum.py  test_code_memory_mcp_wiring.py  test_codex_bypass_contract.py  test_compose_converse_condense.py  test_compose_converse_intent.py  test_connector_runner.py  test_conversation_condenser.py  test_converse_condense_recorder.py  (+73 more)
(+287 files in other folders)
