[project]
name = "alfred-os"
version = "0.1.0"
description = "A small framework for running a fleet of narrow-specialist Claude Code agents on a single Mac, dispatched by cron, isolated by git worktree."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Alfred-OS contributors" },
]
requires-python = ">=3.11"
keywords = ["claude-code", "agents", "cron", "launchd", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://luminik-io.github.io/alfred-os"
Repository = "https://github.com/luminik-io/alfred-os"
Issues = "https://github.com/luminik-io/alfred-os/issues"
Changelog = "https://github.com/luminik-io/alfred-os/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

# --------------------------------------------------------------------------
# ruff — linting + formatting
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "site/",                # Astro project; eslint/prettier-territory
  "examples/bin/hello.py", # intentionally minimal example
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length — handled by `line-length` and rare cases need long URLs
  "B008",  # function call in default arg — common in agent_runner for STATE_ROOT defaults
  "SIM108", # ternary suggestions — sometimes if/else is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]   # asserting on tuples in tests is fine
"examples/**" = ["F401"] # imports for documentation purposes

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --------------------------------------------------------------------------
# mypy — type checking (lenient on lib, strict on new code)
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
# agent_runner.py predates strict typing; opt in incrementally.
module = "agent_runner"
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

# --------------------------------------------------------------------------
# pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:dateutil.*",
]
[[tool.mypy.overrides]]
# Optional brain integration — modules live in the operator's private
# fleet, not in alfred-os. The agent_runner functions that import these
# are guarded by _shared_agent_available() and degrade silently when the
# brain isn't mounted. Tell mypy to ignore the missing imports.
module = ["memory_reflect", "recall", "guardrail", "context_budget", "event_stream"]
ignore_missing_imports = true

